# MeritPay

./: .env.contracts  .gitignore  Architecture.md  CLAUDE.md  Cargo.toml  README.md  meritprompt.md
circuits/: auditor_disclosure.circom  claim.circom  kpi.circom  package-lock.json  package.json  payroll_aggregator.circom
contracts/claim/: Cargo.toml
contracts/claim/src/: lib.rs
contracts/claim/test_snapshots/tests/: test_claim_payout_happy_path.1.json
contracts/groth16_verifier/: Cargo.toml
contracts/groth16_verifier/src/: lib.rs
contracts/payroll/: Cargo.toml
contracts/payroll/src/: lib.rs
contracts/payroll/test_snapshots/tests/: test_execute_payroll_happy_path.1.json  test_execute_payroll_rejects_insufficient_funds.1.json  test_execute_payroll_rejects_invalid_proof.1.json  test_execute_payroll_rejects_non_admin.1.json  test_execute_payroll_rejects_spent_nullifier.1.json  test_fund_pool_increases_balance.1.json  test_fund_pool_rejects_zero_amount.1.json  test_initialize_sets_initial_state.1.json  test_initialize_twice_fails.1.json  test_set_verifier_vk_hash_admin_only.1.json
scripts/: deploy.sh  gen_proof.js  setup.sh  upload_vk.js
tasks/: todo.md
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/auditor/: page.tsx
web/app/employee/: page.tsx
web/app/employer/: page.tsx
web/app/verify/: page.tsx
web/components/: EmployeeCard.tsx  Navbar.tsx  ProofBadge.tsx  WalletConnect.tsx
web/lib/: claim.ts  proof.ts  stellar.ts  types.ts
web/public/circuits/auditor/: auditor_disclosure.wasm  (+1 more)
(+6 files in other folders)
